--- a/tanstack-cloudflare/biome.json
+++ b/tanstack-cloudflare/biome.json
@@ -15,7 +15,8 @@
 			"**/vitest.config.ts",
 			"!**/src/routeTree.gen.ts",
 			"!**/src/styles.css",
-			"!**/worker-configuration.d.ts"
+			"!**/worker-configuration.d.ts",
+			"!**/src/server/db/schema/auth.ts"
 		]
 	},
 	"formatter": {
