--- a/tanstack-cloudflare/package.json
+++ b/tanstack-cloudflare/package.json
@@ -29,8 +29,11 @@
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
+    "@react-email/render": "^2.0.4",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-devtools": "^0.7.0",
+    "@tanstack/react-form": "^1.28.3",
+    "@tanstack/react-form-start": "^1.28.3",
     "@tanstack/react-query": "^5.66.5",
     "@tanstack/react-query-devtools": "^5.84.2",
     "@tanstack/react-router": "^1.132.0",
@@ -48,6 +51,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-timezone-select": "^3.2.8",
+    "resend": "^6.9.2",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.6",
     "tw-animate-css": "^1.3.6",
